<resources>
    <string name="app_name">Afilly</string>

    <string name="menu_home_home">Home</string>
    <string name="menu_home_profile">Profile</string>

    <string name="home_select_options">Select what you want to calculate</string>

    <string name="label_username">Your name</string>
    <string name="label_phone">Fone</string>
    <string name="label_email">E-mail</string>
    <string name="label_password">Password</string>
    <string name="label_accept_terms">I have read and accept the terms</string>
    <string name="label_terms">Terms of use</string>

    <string name="label_create_account">Create my account</string>
    <string name="label_reset_password">I forgot my password</string>

    <string name="logo_app_content_desc">Logo app</string>
    <string name="button_login">Login</string>
    <string name="button_create_account">Create an account</string>
    <string name="button_i_have_account">I already have an account</string>

    <string name="login_subtitle">Please login to continue</string>

    <string name="signup_subtitle">Fill in your account details</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="label_car">Vehicle</string>
    <string name="label_km_gasoline">KM/L Gasoline</string>
    <string name="label_km_ethanol">KM/L Ethanol</string>
    <string name="label_price_gasoline">Gasoline price</string>
    <string name="label_price_ethanol">Ethanol price</string>
    <string name="label_gas_station">Gas station</string>
    <string name="label_average_consumption">Average consumption</string>
    <string name="label_calculate">Discover better fuel</string>
    <string name="label_clear">Clear data</string>

    <string name="loading_message_processing">Loading</string>

    <string name="default_notification_channel_id">Default</string>
    <string name="default_notification_channel_name">Standard</string>
    <string name="default_notification_channel_description">Standard notification channel</string>
    <string name="label_better_fuel_subtitle">Discover the best value for money</string>


</resources>
