<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/tvSubTitleSignUp">
    <LinearLayout
        android:padding="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/ivLogoApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
        <LinearLayout
            android:layout_marginTop="32dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout style="@style/container_edit_text">
                <TextView
                    style="@style/label_edit_text"
                    android:text="@string/label_username" />
                <EditText
                    android:id="@+id/etUserNameSignUp"
                    style="@style/field_edit_text"
                    tools:text="Heider Lopes" />
            </LinearLayout>
            <LinearLayout style="@style/container_edit_text">
                <TextView
                    style="@style/label_edit_text"
                    android:text="@string/label_email" />
                <EditText
                    android:id="@+id/etEmailSignUp"
                    style="@style/field_edit_text"
                    tools:text="heiderlopes@apps.com.br" />
            </LinearLayout>
            <LinearLayout style="@style/container_edit_text">
                <TextView
                    style="@style/label_edit_text"
                    android:text="@string/label_phone" />
                <EditText
                    android:id="@+id/etPhoneSignUp"
                    style="@style/field_edit_text"
                    tools:text="(11) 999999-999" />
            </LinearLayout>
            <LinearLayout style="@style/container_edit_text">
                <TextView
                    style="@style/label_edit_text"
                    android:text="@string/label_password" />
                <EditText
                    android:id="@+id/etPasswordSignUp"
                    style="@style/field_edit_text"
                    android:inputType="textPassword"
                    tools:text="xxxxxx" />
            </LinearLayout>
            <Button
                android:id="@+id/btCreateAccount"
                android:text="@string/button_create_account"
                style="@style/button"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>